# MineEdit

./: .gitignore  MineEdit.sln  README.txt  clean.bat  clean.sh  prebuild.xml  runprebuild.bat  runprebuild2010.bat
LaunchServer/: IPlugin.cs  Packet.cs  PermissionsMask.cs  PlayerCollection.cs  Program.cs  Proxy.cs  ServerLauncher.csproj  Settings.cs  TCPServer.cs
MineEdit.MapMonitor/: Class1.cs  MineEdit.MapMonitor.csproj  frmMain.Designer.cs  frmMain.cs
NBTForgeCS/: Base36.cs  Blocks.cs  Chunk.cs  CriticalDamp.cs  Entity.cs  Form1.Designer.cs  IMapHandler.cs  MineEdit.csproj  Program.cs  Settings.cs  Texture.cs  TileEntity.cs  Utils.cs  Vector3d.cs  Vector3i.cs  blocks.txt  dlgAddEntity.Designer.cs  dlgAddEntity.cs  dlgChunk.Designer.cs  dlgChunk.cs  dlgLoading.Designer.cs  dlgLoading.cs  dlgLongTask.Designer.cs  dlgLongTask.cs  dlgReplace.Designer.cs  dlgReplace.cs  dlgReplace.resx  dlgStatus.Designer.cs  dlgStatus.cs  dlgStatus.resx  dlgTerrainGen.Designer.cs  dlgTerrainGen.cs  frmAbout.Designer.cs  frmAbout.cs  frmAbout.resx  frmMain.Designer.cs  frmMain.cs  frmMain.resx  frmMap.Designer.cs  frmMap.cs  (+10 more)
OpenMinecraft.2DRendering/: I2DMapRenderer.cs  MapRenderer.cs  OpenMinecraft.2DRendering.csproj
OpenMinecraft.3DRendering/: Camera.cs  ChunkRenderer.cs  Texture.cs  Viewport.cs
OpenMinecraft.Core/: Biome.cs  Blocks.cs  Cave.cs  Chunk.cs  Dimension.cs  Entity.cs  ILightRecalculator.cs  (+18 more)
lib/quartz-lightgen/: CMakeLists.txt  blockinfo.cpp  blockinfo.h  blocktypes.h  chunkstore.cpp  chunkstore.h  common.cpp  common.h  lightgen.cpp  main.cpp  nbt.cpp  nbt.h
(+163 files in other folders)
